--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="module" src="./js/main.js"></script>
+    <!-- <script type="module" src="./js/main.js"></script> -->
     <title>Odin Battleship</title>
   </head>
   <body>
-    <header>THIS</header>
-    <div id="game-content">
-      <!-- <div id="messages"></div>
-        <div id="player-one"></div>
-        <div id="game-board"></div>
-        <div id="player-one"></div> -->
-    </div>
-    <footer></footer>
+    <div id="header"></div>
+    <div id="messages">Messages</div>
+    <div id="start-content">Start Game</div>
+    <div id="game-content"></div>
+    <div id="test"></div>
   </body>
 </html>
