added ship marker placement, more css and ui styling

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div id="header"></div>
-    <div id="messages">Messages</div>
-    <div id="start-content">Start Game</div>
+    <div id="messages">Messages???</div>
+    <div id="start-content">Start Game????</div>
     <div id="game-content"></div>
     <div id="test"></div>
   </body>
