refactoring more non-DRY modules

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="header"></div>
     <div id="messages"></div>
-    <div id="start-content"></div>
+    <div id="main-btn-container"></div>
     <div id="game-content"></div>
     <div id="test"></div>
   </body>
