--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,6 @@
     <div id="header"></div>
     <div id="messages"></div>
     <div id="main-btn-container"></div>
-    <div id="game-content"></div>
-    <div id="test"></div>
+    <div id="board-container"></div>
   </body>
 </html>
