--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <script type="module" src="./js/main.js"></script> -->
+     <link rel="icon" href="src/assets/anchor.svg" type="image/x-icon">
+
     <title>Odin Battleship</title>
   </head>
   <body>
