more tweaks to css; wrapped all elements into a div for better sizing

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,11 @@
     <title>Odin Battleship</title>
   </head>
   <body>
-    <div id="header"></div>
-    <div id="messages"></div>
-    <div id="main-btn-container"></div>
-    <div id="board-container"></div>
+    <div id="app-container">
+      <div id="header"></div>
+      <div id="messages"></div>
+      <div id="main-btn-container"></div>
+      <div id="board-container"></div>
+    </div>
   </body>
 </html>
