fixed message height issue in larger views, now it uses fit-content conditionally when btnUnlockScreen is flex

--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <script type="module" src="./js/main.js"></script> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin Battleship</title>
   </head>
   <body>
     <div id="app-container">
-      <div id="header"></div>
+      <header id="header"></header>
       <div id="messages"></div>
       <div id="main-btn-container"></div>
       <div id="board-container"></div>
